@@ -3,6 +3,7 @@
 	* dotemacs.el
 	(find-file-guessing): new function to wrap find-file
 	(kbd): use find-file-guessing with C-x C-f, suppress H-x H-f
+	(ediff-keymap-setup-hook): solved conflict in keybindings
 
 	* emacs.d/emacs-d-vars.el:
 	initial checkin
